--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-web": "~0.18.9",
-    "react-native-webview": "^11.26.0",
+    "react-native-webview": "11.23.1",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
